src/scss/main.scss
// Variables

$brand-brown: #452e26;
$brand-yellow: #c49524;
$rollover-yellow: #fdc33c;
$brand-cream: #fff8e9;
$white-text: #ffebc1;
$dark-text: #452e26;

@mixin mq($size) {
  @if $size == sm {
    @media (min-width: 768px) { @content; }
  }
  @else if $size == md {
    @media (min-width: 992px) { @content; }
  }
  @else if $size == lg {
    @media (min-width: 1200px)  { @content; }
  }
}

@font-face {
	font-family: NunitoSansLight;
	src: url(fonts/NunitoSans-Light.ttf);
}
@font-face {
	font-family: NunitoSans;
	src: url(fonts/NunitoSans-Regular.ttf);
}
@font-face {
	font-family: NunitoSansBold;
	src: url(fonts/NunitoSans-Bold.ttf);
}
@font-face {
	font-family: NunitoSansSemiBold;
	src: url(fonts/NunitoSans-SemiBold.ttf);
}
@font-face {
	font-family: NunitoSansExtraBold;
	src: url(fonts/NunitoSans-ExtraBold.ttf);
}

@mixin ir() {
	background-position: top left;
	background-repeat: no-repeat;
	background-size: 100%;
	text-indent: -9999px;
}

// General

html, body {
	width: 100%;
}

body {
	background-color: $brand-cream;
	overflow-x: hidden;
	padding-top: 51px;
	padding-bottom: 0;
	@include mq(sm){
		padding-top: 60px;
	}
	@include mq(md){
		padding-top: 75px;
	}
	@include mq(lg){
		padding-top: 100px;
	}
}

// Navigation

nav {
	border: 0;
}

.navbar {
	@include mq(lg) {
		.container {
			width: 955px;
		}
	}
}
.navbar-toggle {
	cursor: pointer;
	float: left;
}

.icon-bar {
	background-color: $brand-cream;
}

.nav-logo {
	background-image: url('../img/ddd-logo.svg');
	display: block;
	margin: 3px auto;
	height: 46px;
	width: 160px;
	@include ir();
	@include mq(sm) {
		height: 37px;
		margin: 8px 0 0 0;
		width: 144px;
	}
	@include mq(md) {
		height: 46px;
		margin: 13px 0 0 0;
		width: 180px;
	}
	@include mq(lg) {
		height: 62px;
		margin: 19px 0 0 0;
		width: 230px;
	}
}

.nav-list {
	display: block;
	list-style-type: none;
	margin: 0 auto;
	padding: 0;
	@include mq(sm) {
		display: inline-block;
		padding: 0 0 0 55px;
	}
}

.nav-list-item {
	line-height: 30px;
	position: relative;
	text-align: left;
	transition: color 0.2s;
	@include mq(sm) {
		display: inline-block;
		font-size: 14px;
		line-height: 60px;
		text-align: center;
	}
	@include mq(md) {
		font-size: 18px;
		line-height: 75px;
	}
	@include mq(lg) {
		line-height: 100px;
	}

	a {
		color: $white-text;
		cursor: pointer;
		text-decoration: none;

		&:hover {
			color: $rollover-yellow;
		}
	}
}

.nav-list-item:not(:first-child) {
	@include mq(sm){
		padding-left: 16px;
	}
}

.nav-btn {
	background: $white-text;
	color: $brand-brown;
	display: block;
	line-height: 30px;
	margin: -1px -15px;
	padding: 0 10px;
	text-align: left;
	text-transform: uppercase;
	transition: background 0.2s;
	@include mq(sm) {
		display: inline-block;
		font-size: 14px;
		line-height: 60px;
		margin-left: 20px;
	}
	@include mq(md) {
		font-size: 18px;
		line-height: 75px;
	}
	@include mq(lg) {
		font-size: 18px;
		line-height: 100px;
	}

	&:hover {
		background: $brand-yellow;
		color: $brand-brown;
		text-decoration: none;
	}
}

.navbar {
	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/$brand-brown+0,452e26+50,573c27+100 */
	background: $brand-brown; /* Old browsers */
	background: -moz-linear-gradient(top,  $brand-brown 0%, $brand-brown 50%, #573c27 100%); /* FF3.6-15 */
	background: -webkit-linear-gradient(top,  $brand-brown 0%,$brand-brown 50%,#573c27 100%); /* Chrome10-25,Safari5.1-6 */
	background: linear-gradient(to bottom,  $brand-brown 0%,$brand-brown 50%,#573c27 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=$brand-brown, endColorstr='#573c27',GradientType=0 ); /* IE6-9 */

	font-family: NunitoSansSemiBold, sans-serif;
	@include mq(sm){
		max-height: 60px;
	}
	@include mq(md){
		max-height: 75px;
	}
	@include mq(lg){
		max-height: 100px;
	}
}

.navbar-collapse {
	text-align: center;
	@include mq(sm) {
		background: transparent;
		text-align: left;
	}
}

.nav-submenu {
	background-color: $brand-cream;
	-webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.29);
	-moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.29);
	box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.29);
	color: $dark-text;
	display: block;
	list-style-type: none;
	margin: 0 -15px;
	max-height: 0;
	overflow: hidden;
	padding: 0 0 0 10px;
	text-align: left;
	transition: all 0.2s;
	@include mq(sm) {
		// display: none;
		left: 15px;
		position: absolute;
		top: 75px;
		white-space: nowrap;
	}

	a {
		color: $dark-text;
	}
}

.submenu-toggle {
	background-image: url('../img/read-more-arrow.png');
	background-position: center;
	background-repeat: no-repeat;
	background-size: 100%;
	display: inline-block;
	height: 15px;
	margin-bottom: -2px;
	margin-left: 8px;
	opacity: 0.8;
	transition: all 0.2s;
	width: 15px;
	@include mq(sm) {
		display: none;
	}
}

.nav-list-item.open {
	.nav-submenu {
		max-height: 300px;
		padding: 10px 20px 10px 20px;
	}
	.submenu-toggle {
		opacity: 1;
		transform: rotate(90deg);
	}
}

.nav-list-item:not(:first-child) {
  .nav-submenu {
    margin-left: -10px;
  }
}

.submenu-item {
	@include mq(sm) {
		line-height: 30px;
	}
}

.section {
	.row {
		margin: 0 auto;
		max-width: 960px;
	}

	&.speakers {
		text-align: center;
	}
}

// Sliders

.slider {
	margin-bottom: 0;
	height: 500px;
	position: relative;
	@include mq(sm){
		height: 400px;
	}
}

.slide {
	background-position: bottom center;
	background-size: cover;
	height: 500px;
	@include mq(sm){
		height: 400px;
	}
	@include mq(lg) {
		.container {
			width: 955px;
		}
	}
}

.slide.hyatt {
	background-image: url('../img/sliders/slider-Hyatt-700x600.jpg');
	@include mq(sm){
		background-image: url('../img/sliders/slider-hyatt-1600x400-2.png');
	}
}
/* ... */

